[package]
name = "scry-top"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
description = "Pixel-perfect terminal system monitor powered by scry"
license = "MIT OR Apache-2.0"

[[bin]]
name = "scry-top"
path = "src/main.rs"

[dependencies]
scry-engine = { path = "../.." }
scry-chart = { path = "../scry-chart", features = ["widget"] }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
sysinfo = "0.34"

[lints.clippy]
all = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
needless_pass_by_value = "allow"
items_after_statements = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
